# foxrobotlab_ros2

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TURTLE_CONTROL_TEST_GUIDE.md  package.xml  thirdparty.repos
config/: client_server.yaml  match_planner.yaml
launch/: kobuki.launch.py  laptop_servers.launch.py  localizer_client.launch.py  match_planner.launch.py  robot_system.launch.py  tensorflow_check.launch.py  turtle_control.launch.py  video_stream_client.launch.py
scripts/: activate_tf_venv.sh
src/: 3D_CNN.py  AnnotRewriter.py  CNNLSTM2026.py  HierarchyPipieline.py  RegionPredict.py  VIVITPretrained.py  VIVITransformer.py  client_test.py  gui_status_bridge.py  localizer_client.py  localizer_protocol.py  localizer_server.py  odomListener.py  odomListerner.py  planner_protocol.py  remote_localizer.py  seeker_gui_unified.py  server_test.py  turtle_control_display.py  turtle_control_getter_test.py  turtle_control_processor.py  turtle_control_reciever.py  turtle_control_smoke_test.py  video_protocol.py  video_stream_client.py  video_stream_server.py
src/client_server/: cnn_model_adapter.py  gui_headless.py  gui_status_bridge.py  gui_unified.py  localizer_engines.py  localizer_remote.py  localizer_server.py  protocol.py  tensorflow_check.py  video_client.py  video_server.py
src/lab_interfaces/: CMakeLists.txt  package.xml
src/lab_interfaces/msg/: CommandMuxStatus.msg  MatchPlannerStatus.msg  RobotState.msg  SafetyStatus.msg
src/lab_interfaces/srv/: MatchLocalize.srv  SetMatchPlannerGoal.srv  SetMatchPlannerStart.srv
src/match_seeker/res/models/: newCellPredAdam224-74-1.26.keras
src/match_seeker/scripts/: DataPaths.py  FieldBehaviors.py  ImageDataset.py  Localizer.py  Localizer2.py  MonteCarloLocalize.py  MovementHandler.py  OlinWorldMap.py  OutputLogger.py  PathLocation.py  PotentialFieldThread.py  SeekerGUI2.py  TestModelPredictions.py  convertModelAlternative.py  convertModelKeras3.py  localizer_client.py  localizer_protocol.py  localizer_server.py  matchPlanner.py  remote_localizer.py  run.sh  testNewKerasModel.py  tfTest.py  tfTestModel2.py  turtleControl.py
src/match_seeker/scripts/DataProcessing/: collectData2022.py  processVideoFiles.py
src/match_seeker/scripts/olri_classifier/: DataBalancing2022.py  DataGenerator2022.py  DataGeneratorCNNTransformer.py  DataGeneratorLSTM.py  DataGeneratorVIVIT.py  cnnRunModel.py  cnn_cell_model_2019.py  cnn_cell_model_RGBinput.py  cnn_heading_model_2019.py  cnn_heading_model_RGBinput.py  cnn_lstm_cell_model_2024.py  cnn_lstm_heading_model_2024.py  cnn_transformer_heading_model_2024.py  frameCellMap.py  imageFileUtils.py  runModel.py  stratifiedDataGen.py  transformerRunModel.py
src/migrated_match_seeker/scripts/: FieldBehaviors.py  LocalizerStringConstants.py  Particle.py
src/robot_adapters/: CMakeLists.txt  package.xml
src/robot_adapters/config/: tb2_topics.yaml  tb4_topics.yaml
src/robot_adapters/launch/: adapter.launch.py  tb2_receiver_compat_test.launch.py
src/robot_adapters/src/: tb2_adapter.py  tb4_adapter.py
src/robot_apps/: CMakeLists.txt  package.xml
src/robot_apps/config/: simple_drive.yaml  state_printer.yaml
src/robot_apps/launch/: tb2_match_planner.launch.py  tb2_simple_drive.launch.py  tb2_state_test.launch.py
src/robot_apps/robot_apps/match_planner/: DataPaths.py  FieldBehaviors.py  Graphs.py  Localizer2.py  MapGraph.py  OlinWorldMap.py  OutputLogger.py  PathLocation.py  PotentialFieldThread.py  localizer_stub_node.py  match_planner_node.py  planner_core.py
src/robot_apps/robot_apps/match_planner/config/: match_planner.yaml  match_planner_dry_run.yaml  match_planner_hardware_dry_run.yaml  match_planner_turn_test.yaml
src/robot_apps/robot_apps/simple_drive/: simple_drive_app.py
src/robot_apps/robot_apps/simple_drive/config/: simple_drive.yaml
src/robot_apps/robot_apps/state_printer/: print_robot_state_app.py
src/robot_apps/src/: print_robot_state_app.py  simple_drive_app.py
src/robot_bringup/: CMakeLists.txt  package.xml
src/robot_bringup/config/: deployment.yaml
src/robot_bringup/launch/: tb2_base.launch.py  tb2_modular_match_planner.launch.py  tb2_system.launch.py
src/robot_core/: CMakeLists.txt  package.xml
src/robot_core/config/: command_mux.yaml  core_params.yaml  safety_params.yaml
src/robot_core/launch/: core.launch.py
src/robot_core/robot_core/: __init__.py  robot_control_processor.py
src/robot_core/src/: command_mux.py  robot_processor.py  safety_monitor.py
src/test/: CMakeLists.txt  package.xml
src/test/config/: command_mux_verifier.yaml  match_planner_dry_run_verifier.yaml  match_planner_hardware_dry_run_verifier.yaml  match_planner_shell_verifier.yaml  match_planner_turn_test_verifier.yaml  phase2_verifier.yaml
src/test/launch/: command_mux_verifier.launch.py  match_planner_dry_run_verifier.launch.py  match_planner_hardware_dry_run_verifier.launch.py  match_planner_shell_verifier.launch.py  match_planner_turn_test_verifier.launch.py  phase2_adapter_compat_test.launch.py  phase2_topic_verifier.launch.py  robot_control_processor_smoke.launch.py  tb2_state_test.launch.py
src/test/src/: command_mux_verifier.py  match_planner_shell_verifier.py  phase2_topic_verifier.py  robot_control_processor_smoke.py
tests/: listener.py  talker.py
