<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>foxrobotlab_ros2</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="amojica@macalester.edu">andremoh</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <!-- Development Dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <!-- Hardware Driver Dependencies -->
  <exec_depend>kobuki_description</exec_depend>
  <exec_depend>kobuki_ros_interfaces</exec_depend>
  <exec_depend>kobuki_ros</exec_depend>
  <exec_depend>astra_camera</exec_depend>
  <exec_depend>rplidar_ros</exec_depend>
  <exec_depend>openni2_camera</exec_depend>
  <exec_depend>ecl_core</exec_depend>
  <exec_depend>ecl_lite</exec_depend>
  <exec_depend>laser_filters</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
